Fixed small close button on mobile

--- a/elFinderPicker.css
+++ b/elFinderPicker.css
@@ -55,7 +55,7 @@
 	}
 	.elfinder-picker-close{
 		right: 18px;
-		font-size: 6px;
+		font-size: 26px;
 	}
 
 }
